# CMake-SDL-Demo

./: .gitignore  CMakeLists.txt  README.md
assets/: fragment_shader.fsh  vertex_shader.vsh
libs/imgui/: imgui_impl_sdl_gl3.cpp
scripts/: gen_macos.sh
src/: app.h  app_platform.cpp  app_platform.h  demo_app.cpp  demo_app.h  demo_scene.cpp  demo_scene.h  file_dialog.h  file_dialog_mac.h  file_dialog_mac.mm  file_dialog_win.cpp  gl_utils.cpp  gl_utils.h  input.cpp  input.h  main.cpp  main_loop.cpp  main_loop.h  render_stage.cpp  render_stage.h  renderer.cpp  renderer.h  scene.h  stage_image.cpp  stage_image.h
